Alignment issue fix

--- a/src/css/Challenges.css
+++ b/src/css/Challenges.css
@@ -8,6 +8,6 @@
 .challenges-main {
   width: 98%;
   background: white;
-  padding: 50px 100px 200px 50px;
+  padding: 50px 100px 50px 100px;
   text-align: center;
 }
