--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -8,7 +8,7 @@
 .projects-main {
   width: 98%;
   background: white;
-  padding: 50px 100px 200px 100px;
+  padding: 50px 100px 50px 100px;
   text-align: center;
 }
 
